# opendrc

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
data/: area.drc  enc.drc  space.drc  width.drc
data/gcd/: gcd.gds
data/modified_data/: uart.gds
docs/: README.md  manual.md
examples/: CMakeLists.txt  main.cpp  overlap_query.cpp
odrc/: CMakeLists.txt  main.cpp
odrc/algorithm/: CMakeLists.txt  area-check-dac23.cu  area-check.cpp  area-check.cu  area-check.hpp  enc-check.cpp  enc-check.cu  enc-xcheck.cu  enclosing-check.cpp  enclosing-check.hpp  layout-partition.hpp  parallel_mode.hpp  sequential_mode.hpp  space-check-dac23-duf.cu  space-check-dac23-seq.cpp  space-check-dac23-stats.cu  space-check-dac23-v4.cu  space-check-dac23-v5.cu  space-check-dac23-v7.cu  space-check-dac23.cu  space-check-enclosing.cu  space-check.cpp  space-check.cu  space-check.hpp  space-xcheck.cu  width-check-dac23.cu  width-check.cpp  width-check.cu  width-check.hpp  width-xcheck.cu
odrc/core/: CMakeLists.txt  cell.hpp  common_structs.hpp  database.hpp  edge.hpp  engine.hpp  execution.hpp  interval_tree.cpp  interval_tree.hpp  option.hpp  overlap_check.hpp  rule.hpp  structs.hpp  sweepline.hpp
odrc/db/: CMakeLists.txt  cell.hpp  db.hpp  elem.hpp  layer.hpp
odrc/gdsii/: CMakeLists.txt  gdsii.cpp  gdsii.hpp
odrc/geometry/: CMakeLists.txt  box.hpp  coordinate_system.hpp  geometry.hpp  point.hpp  polygon.hpp  spatial.hpp
odrc/infrastructure/: CMakeLists.txt  execution.hpp  task-queue.hpp
odrc/infrastructure/exception/: CMakeLists.txt  exception.hpp
odrc/infrastructure/logger/: CMakeLists.txt  logger.hpp
odrc/infrastructure/sweepline/: CMakeLists.txt  sweepline.hpp
odrc/interface/: CMakeLists.txt
odrc/interface/gdsii/: CMakeLists.txt  gdsii.cpp  gdsii.hpp
odrc/utility/: CMakeLists.txt  cuda_utility.hpp  datetime.hpp  exception.hpp  logger.hpp  proxy.hpp  timer.hpp
scripts/: check.py
tests/: CMakeLists.txt
tests/algorithm/: layout-partition.test.cpp
tests/core/: interval_tree.cpp  interval_tree.test.cpp  intervaltree.test.cpp  sweepline.test.cpp  sweepline.test.cu
tests/db/: cell.test.cpp  db.test.cpp  elem.test.cpp
tests/gdsii/: gdsii.test.cpp
tests/geometry/: box.test.cpp  point.test.cpp  polygon.test.cpp  spatial.test.cpp
tests/infrastructure/exception/: exception.test.cpp
tests/infrastructure/logger/: logger.test.cpp
tests/infrastructure/sweepline/: sweepline.test.cpp  sweepline.test.cu
tests/interface/gdsii/: gdsii.test.cpp
tests/utility/: exception.test.cpp  logger.test.cpp  proxy.test.cpp  timer.test.cpp
